<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginEnd="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:scrollbarStyle="insideOverlay"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteY="73dp">


        <TextView
            android:id="@+id/QuantityText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/colvokoffe"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pluschocochkbox" />

        <TextView
            android:id="@+id/kolichestvo"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:editable="false"
            android:ems="10"
            android:gravity="center"
            android:text="0"
            app:layout_constraintEnd_toEndOf="@+id/QuantityText"
            app:layout_constraintStart_toStartOf="@+id/QuantityText"
            app:layout_constraintTop_toBottomOf="@+id/QuantityText" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="230dp" />

        <Button
            android:id="@+id/buttonzakaz"
            style="@android:style/Widget.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:onClick="submitOrder"
            android:text="@string/podschet"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Price" />

        <TextView
            android:id="@+id/Priceview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/price"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/QuantityText"
            app:layout_constraintStart_toStartOf="@+id/QuantityText"
            app:layout_constraintTop_toBottomOf="@+id/kolichestvo" />

        <TextView
            android:id="@+id/Price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:editable="false"
            android:ems="10"
            android:gravity="center"
            android:text="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Priceview" />

        <Button
            android:id="@+id/plusbutton"
            style="@android:style/Widget.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:inputType="none"
            android:onClick="addcup"
            android:text="++"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/kolichestvo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/QuantityText" />

        <Button
            android:id="@+id/minusbutton"
            style="@android:style/Widget.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:onClick="decrcup"
            android:text="-"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.326"
            app:layout_constraintStart_toEndOf="@+id/kolichestvo"
            app:layout_constraintTop_toBottomOf="@+id/QuantityText" />

        <CheckBox
            android:id="@+id/plusslivkichkbox"
            style="@android:style/Widget.CompoundButton.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:checked="false"
            android:text="@string/AddSlivki"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/NameInput" />

        <CheckBox
            android:id="@+id/pluschocochkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/AddChoco"
            app:layout_constraintStart_toStartOf="@+id/plusslivkichkbox"
            app:layout_constraintTop_toBottomOf="@+id/plusslivkichkbox" />

        <EditText
            android:id="@+id/NameInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/YourName"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="@+id/plusslivkichkbox"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/EndText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:editable="false"
            android:ems="10"
            android:inputType="none"
            android:textAppearance="@android:style/TextAppearance"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonzakaz" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>